--- a/pixray_minimal.ipynb
+++ b/pixray_minimal.ipynb
@@ -307,10 +307,10 @@
         "from IPython.utils import io\n",
         "with io.capture_output() as captured:\n",
         "  !rm -Rf pixray\n",
-        "  !git clone https://github.com/pixray/pixray\n",
+        "  !git clone https://github.com/rosivbus/pixray\n",
         "  !pip install -r pixray/requirements.txt\n",
         "  !pip uninstall -y tensorflow \n",
-        "  !git clone https://github.com/pixray/diffvg\n",
+        "  !git clone https://github.com/rosivbus/diffvg\n",
         "  %cd diffvg\n",
         "  !git submodule update --init --recursive\n",
         "  !python setup.py install\n",
